# TopoMS

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  install.topoms-ui.sh  install.topoms.sh
configs/: example.conf
msc/: LICENSE
msc/include/: adaptive_euler_advector.h  adaptive_in_quad_euler_advector.h  advection_checker.h  advection_events.h  array_index_partition.h  basic_types.h  discrete_gradient_labeling.h  isolated_region_remover.h  isolated_region_remover2.h  kdtree.h  labeling.h  labeling_to_bounary_labeling.h  morse_smale_complex_basic.h  morse_smale_complex_restricted.h  msc_iterators.h  msc_selectors.h  numeric_integrator_2d_restricted_expanding_region.h  numeric_integrator_expanding_region_stop.h  numeric_integrator_expanding_region_stop_filtered2.h  numeric_integrator_region_stop.h  numeric_streamline_integrator.h  regular_grid.h  regular_grid_trilinear_function.h  robin_labeling.h  strictly_numeric_integrator.h  timing.h  topological_2d_restricted_expanding_regions.h  topological_convergent_gradient_builder.h  topological_explicit_mesh_function.h  topological_gradient_using_algorithms.h  topological_region_growing_simple_gradient_builder.h  topological_regular_grid.h  topological_regular_grid_restricted.h  topological_regular_masked_grid.h  topological_regular_masked_restricted_grid.h  topological_utility_functions.h  vectors.h
msc/src/: regular_grid.cxx  regular_grid_trilinear_function.cpp
scripts/: CAR2vti.py  VASPutils.py  compute_chgCOM.py  plot_bondStats.py
topoms/: CMakeLists.txt  README.md
topoms-cli/: CMakeLists.txt  LICENSE
topoms-ui/: CMakeLists.txt  LICENSE  README.md  TopoMSUI.pro
topoms-ui/include/: Colorator.h  TopoMSUI.ui  TopoMS_MainWindow.h  TopoMS_Viewer.h  TransferFunctionEditor.h  vsvr.h
topoms-ui/src/: TopoMS_MainWindow.cpp  TopoMS_Viewer.cpp  TransferFunctionEditor.cpp  main.cpp  main.cxx  vsvr.cpp
topoms/include/: ConfigParser.h  InputFormats.h  MSCBond.h  Mat3.h  Material.h  MolecularSystem.h  MultilinearInterpolator.h  TopoMS.h  Utils.h  Vec3.h  version.h  vtkVolumeSlicer.h
topoms/src/: MSCBond.cpp  TopoMS-vtk.cpp  TopoMS.cpp  Utils.cpp  main.cpp  vtkVolumeSlicer.cpp
